# ATLAS

./: .env.example  .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  fix_mypy.py  fix_mypy_2.py  fix_mypy_3.py  importlinter.ini  mypy_errors.txt  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/bugfix-stupid-general-bugs/: design.md  requirements.md  tasks.md  (+1 more)
config/: calendar.yaml  contacts.yaml  email.yaml  knowledge_sources.yaml  models.yaml  notifications.yaml  permissions.yaml  settings.yaml
src/atlas/: __init__.py  app.py
tests/: conftest.py  fakes.py
tests/architecture/: test_boundaries.py
tests/capabilities/: fakes.py  test_dispatcher.py  test_provider_registry.py  test_registry.py  test_router.py
tests/control/: test_app_control.py
tests/intelligence/: __init__.py  test_budget.py  test_circuit_breaker.py  test_fallback.py  test_governor.py  test_selector.py
tests/memory/: __init__.py  test_episodic.py  test_pruning.py  test_retrieval.py  test_semantic.py
tests/orchestration/: __init__.py  test_context_builder.py  test_dispatcher.py  test_limits.py  test_parser_validator.py  test_reasoning_loop.py  test_router.py  test_self_critique.py  test_state_machine.py
tests/perception/: test_ax_perception.py
tests/safety/: ATLAS Phase 4.5 — Implementation (In-Loop Self-Critique for Tier-2+ Actions)-20260707003237.md  test_engine.py  test_mass_deletion_e2e.py
tests/tools/: test_filesystem.py  test_paths.py  test_sandbox.py  test_shell.py
tests/unit/: test_classifier.py  test_matchers.py  test_registry.py  test_smoke.py
(+231 files in other folders)
