[project]
name = "atlas"
version = "0.1.0"
description = "ATLAS — Autonomous Task & Learning Agent System (local-first personal agent)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "chromadb>=0.5",
    "cryptography>=49.0.0",
]

[project.optional-dependencies]
macos = [
    "pyobjc-core>=10.3; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.3; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.3; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.3; sys_platform == 'darwin'",
]

[project.scripts]
atlas = "atlas.interfaces.cli:app"

# uv dev dependencies (uv reads this group natively)
[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
    "types-PyYAML>=6.0",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["atlas"]
mypy_path = "src"
